# nonlinear-kinematic-bicycle-model-control-autonomous-vehicles

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simulation.csv  test.cpp  waypoints.csv
OLD/: Kinematic_Bicycle_Model.py  test.py
data/: waypoints1.csv
include/: types.hpp
include/control/: VelocityProfile.hpp  p_controller.hpp  pid_controller.hpp  pure_pursuit.hpp  stanley.hpp
include/models/: KinematicsBicylceModel.hpp
include/trajectory/: PathGenerator.hpp  ReferenceManager.hpp
python/: analyze_tracking.py  animate.py  animateMotion.py  compare_animation.py  compare_controllers.py  pathPloting.py  plot_trajectory.py  requirements.txt
results/: PP_trajectory1.csv  PP_trajectory2.csv  PP_trajectory3.csv  PP_trajectory4.csv  PP_trajectory5.csv  PP_trajectory6.csv  Stanley.csv  Stanley_trajectory5.csv  v.csv
results/Model/: model_sim.csv
results/PurePursuit/: PP_trajectory1.csv  PP_trajectory2.csv  PP_trajectory3.csv  PP_trajectory4.csv  PP_trajectory5.csv  PP_trajectory6.csv
results/Stanley/: Stanley_trajectory1.csv  Stanley_trajectory2.csv  Stanley_trajectory3.csv  Stanley_trajectory4.csv  Stanley_trajectory5.csv  Stanley_trajectory6.csv
simulations/: model_sim.cpp  pure_pursuit_sim.cpp  stanley_sim.cpp
src/: main.cpp  pathPloting.py  simulation.csv  waypoints.csv
src/models/: KinematicsBicylceModel.cpp
test/: simulation.csv  testmodel.cpp  testplot.py  testplotwaypoints.py  waypoints.csv
trajectories/: trajectory0.csv  trajectory1.csv  trajectory2.csv  trajectory3.csv  trajectory4.csv  trajectory5.csv  trajectory6.csv
(+3 files in other folders)
